Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -33,6 +33,30 @@
       "execution_count": null,
       "source": "!pip install -q google-api-python-client",
       "outputs": []
+    },
+    {
+      "id": "a0f7b74d-14cc-4fae-9913-827eafb7bf76",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "import os\nfrom googleapiclient.discovery import build\n\n# Set up the YouTube API client\napi_key = 'AIzaSyDRPOuUK-x3sboFRUb1zO-YwgZdJy78ugE'\nyoutube = build('youtube', 'v3', developerKey=api_key)\n\n# Define the channel ID\nchannel_id = 'UCnaP100kTBB_WGM9IiF73yw'",
+      "outputs": []
+    },
+    {
+      "id": "f6d4d616-5484-4a34-8618-c2e7a3dfc88e",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "# Fetch channel statistics\ndef get_channel_stats(youtube, channel_id):\n    request = youtube.channels().list(\n        part='snippet,contentDetails,statistics',\n        id=channel_id\n    )\n    response = request.execute()\n    return response\n\nchannel_stats = get_channel_stats(youtube, channel_id)\nchannel_stats",
+      "outputs": []
     }
   ]
 }
