--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -39,7 +39,12 @@
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "1ee0502c-7139-4a76-a506-3153a545d3de"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:36:15.906174+00:00",
+          "start_time": "2023-12-13T20:36:15.745441+00:00"
         }
       },
       "execution_count": null,
@@ -51,11 +56,33 @@
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "57f1299e-4311-41de-9035-49d5e0e00bfa"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:36:09.391496+00:00",
+          "start_time": "2023-12-13T20:36:09.125849+00:00"
         }
       },
       "execution_count": null,
       "source": "# Fetch channel statistics\ndef get_channel_stats(youtube, channel_id):\n    request = youtube.channels().list(\n        part='snippet,contentDetails,statistics',\n        id=channel_id\n    )\n    response = request.execute()\n    return response\n\nchannel_stats = get_channel_stats(youtube, channel_id)\nchannel_stats",
+      "outputs": []
+    },
+    {
+      "id": "1c35db46-26c7-4bf9-b5df-19dd70181b0f",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "c745fb82-6ef8-4d8b-a7b7-0da159e40d07"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:35:43.357815+00:00",
+          "start_time": "2023-12-13T20:35:40.031110+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "!pip install --quiet google-api-python-client",
       "outputs": []
     }
   ]
