Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -67,6 +67,23 @@
       "execution_count": null,
       "source": "# Fetch channel statistics\ndef get_channel_stats(youtube, channel_id):\n    request = youtube.channels().list(\n        part='snippet,contentDetails,statistics',\n        id=channel_id\n    )\n    response = request.execute()\n    return response\n\nchannel_stats = get_channel_stats(youtube, channel_id)\nchannel_stats",
       "outputs": []
+    },
+    {
+      "id": "072b1cc3-2cdc-4161-91bf-510958d64563",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "c5d9d47e-146d-47d2-8a88-22411ed39df2"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:38:57.311194+00:00",
+          "start_time": "2023-12-13T20:38:54.462136+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Fetch video IDs from the channel\ndef get_video_ids(youtube, channel_id):\n    video_ids = []\n    request = youtube.playlistItems().list(\n        playlistId=channel_stats['items'][0]['contentDetails']['relatedPlaylists']['uploads'],\n        part='contentDetails',\n        maxResults=50\n    )\n    while request is not None:\n        response = request.execute()\n        video_ids += [item['contentDetails']['videoId'] for item in response['items']]\n        request = youtube.playlistItems().list_next(request, response)\n    return video_ids\n\nvideo_ids = get_video_ids(youtube, channel_id)\nlen(video_ids)",
+      "outputs": []
     }
   ]
 }
