Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -84,6 +84,20 @@
       "execution_count": null,
       "source": "# Fetch video IDs from the channel\ndef get_video_ids(youtube, channel_id):\n    video_ids = []\n    request = youtube.playlistItems().list(\n        playlistId=channel_stats['items'][0]['contentDetails']['relatedPlaylists']['uploads'],\n        part='contentDetails',\n        maxResults=50\n    )\n    while request is not None:\n        response = request.execute()\n        video_ids += [item['contentDetails']['videoId'] for item in response['items']]\n        request = youtube.playlistItems().list_next(request, response)\n    return video_ids\n\nvideo_ids = get_video_ids(youtube, channel_id)\nlen(video_ids)",
       "outputs": []
+    },
+    {
+      "id": "ee56c5c0-941c-4c13-8e53-b201ea3e64a8",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "f482e1df-748d-401e-983b-8e94ff2ab3d3"
+        },
+        "ExecuteTime": null
+      },
+      "execution_count": null,
+      "source": "# Fetch statistics for each video\ndef get_video_details(youtube, video_ids):\n    video_details = []\n    for video_id in video_ids:\n        request = youtube.videos().list(\n            part='snippet,statistics',\n            id=video_id\n        )\n        response = request.execute()\n        video_details.extend(response['items'])\n    return video_details\n\nvideo_details = get_video_details(youtube, video_ids)\nlen(video_details)",
+      "outputs": []
     }
   ]
 }
