--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -91,12 +91,78 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "f482e1df-748d-401e-983b-8e94ff2ab3d3"
+          "output_collection_id": "bca55d4b-e953-4a0f-8251-605e95950f8e"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:40:10.000111+00:00",
+          "start_time": "2023-12-13T20:39:30.686982+00:00"
+        }
       },
       "execution_count": null,
       "source": "# Fetch statistics for each video\ndef get_video_details(youtube, video_ids):\n    video_details = []\n    for video_id in video_ids:\n        request = youtube.videos().list(\n            part='snippet,statistics',\n            id=video_id\n        )\n        response = request.execute()\n        video_details.extend(response['items'])\n    return video_details\n\nvideo_details = get_video_details(youtube, video_ids)\nlen(video_details)",
+      "outputs": []
+    },
+    {
+      "id": "a1058a65-818b-4636-8d92-68e17897212c",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "2a4ce352-9a13-4857-a88a-8e74e20324cc"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:51:57.220789+00:00",
+          "start_time": "2023-12-13T20:51:57.021479+00:00"
+        },
+        "datalink": {
+          "7873b8dd-a6e2-4543-853a-592620c39ecd": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 6,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 280,
+              "truncated_num_cols": 6,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 280,
+              "truncated_string_columns": []
+            },
+            "display_id": "7873b8dd-a6e2-4543-853a-592620c39ecd",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-12-13T20:51:57.058060",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_a8dc1ebc688c4427ae5cf1928ee400ac"
+          }
+        }
+      },
+      "execution_count": null,
+      "source": "import pandas as pd\n\n# Convert video details to DataFrame\ndef videos_to_df(video_details):\n    videos = []\n    for video in video_details:\n        video_info = {\n            'title': video['snippet']['title'],\n            'publishedAt': video['snippet']['publishedAt'],\n            'views': int(video['statistics'].get('viewCount', 0)),\n            'likes': int(video['statistics'].get('likeCount', 0)),\n            'dislikes': int(video['statistics'].get('dislikeCount', 0)),\n            'comments': int(video['statistics'].get('commentCount', 0))\n        }\n        videos.append(video_info)\n    return pd.DataFrame(videos)\n\n# Create DataFrame\ndf_videos = videos_to_df(video_details)\ndf_videos.head()",
       "outputs": []
     }
   ]
