Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -164,6 +164,23 @@
       "execution_count": null,
       "source": "import pandas as pd\n\n# Convert video details to DataFrame\ndef videos_to_df(video_details):\n    videos = []\n    for video in video_details:\n        video_info = {\n            'title': video['snippet']['title'],\n            'publishedAt': video['snippet']['publishedAt'],\n            'views': int(video['statistics'].get('viewCount', 0)),\n            'likes': int(video['statistics'].get('likeCount', 0)),\n            'dislikes': int(video['statistics'].get('dislikeCount', 0)),\n            'comments': int(video['statistics'].get('commentCount', 0))\n        }\n        videos.append(video_info)\n    return pd.DataFrame(videos)\n\n# Create DataFrame\ndf_videos = videos_to_df(video_details)\ndf_videos.head()",
       "outputs": []
+    },
+    {
+      "id": "5490a825-a62a-48f1-9679-cdc05ed362ab",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "22aee7c8-392f-4bf5-b1b1-bd58313e9c79"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:52:38.101646+00:00",
+          "start_time": "2023-12-13T20:52:37.616058+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "import seaborn as sns\nimport matplotlib.pyplot as plt\n\n# Set dark theme for plots\nsns.set(style='darkgrid')\nplt.style.use('dark_background')\n\n# Plotting video views distribution\nplt.figure(figsize=(10, 6))\nsns.histplot(df_videos['views'], kde=True, color='blue')\nplt.title('Distribution of Video Views')\nplt.xlabel('Views')\nplt.ylabel('Frequency')\nplt.show()",
+      "outputs": []
     }
   ]
 }
