Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -108,11 +108,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "23e6ae12-b8df-4d51-8cda-f16af6cb0bfe"
+          "output_collection_id": "53cc32f7-04e7-4321-bc3e-a2a23353c84e"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T20:54:26.169491+00:00",
-          "start_time": "2023-12-13T20:54:25.983435+00:00"
+          "end_time": "2023-12-13T20:54:46.520550+00:00",
+          "start_time": "2023-12-13T20:54:46.298249+00:00"
         },
         "datalink": {
           "7873b8dd-a6e2-4543-853a-592620c39ecd": {
@@ -158,11 +158,99 @@
             "sampling_time": "2023-12-13T20:51:57.058060",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_a8dc1ebc688c4427ae5cf1928ee400ac"
+          },
+          "99b876e7-7e36-475b-bd3c-28b113c44d3f": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 6,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 280,
+              "truncated_num_cols": 6,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 280,
+              "truncated_string_columns": []
+            },
+            "display_id": "99b876e7-7e36-475b-bd3c-28b113c44d3f",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-12-13T20:54:39.559688",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_c4685324f12b4a6db992ae0bcdb95186"
+          },
+          "07c88c02-56d0-46ee-b7a5-44a1b9dc2459": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 6,
+              "orig_num_rows": 1303,
+              "orig_size_bytes": 72968,
+              "truncated_num_cols": 6,
+              "truncated_num_rows": 1303,
+              "truncated_size_bytes": 72968,
+              "truncated_string_columns": []
+            },
+            "display_id": "07c88c02-56d0-46ee-b7a5-44a1b9dc2459",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-12-13T20:54:46.353887",
+            "user_variable_name": "df_videos",
+            "variable_name": "df_videos"
           }
         }
       },
       "execution_count": null,
-      "source": "import pandas as pd\n\n# Convert video details to DataFrame\ndef videos_to_df(video_details):\n    videos = []\n    for video in video_details:\n        video_info = {\n            'title': video['snippet']['title'],\n            'publishedAt': video['snippet']['publishedAt'],\n            'views': int(video['statistics'].get('viewCount', 0)),\n            'likes': int(video['statistics'].get('likeCount', 0)),\n            'dislikes': int(video['statistics'].get('dislikeCount', 0)),\n            'comments': int(video['statistics'].get('commentCount', 0))\n        }\n        videos.append(video_info)\n    return pd.DataFrame(videos)\n\n# Create DataFrame\ndf_videos = videos_to_df(video_details)\ndf_videos.head()",
+      "source": "import pandas as pd\n\n# Convert video details to DataFrame\ndef videos_to_df(video_details):\n    videos = []\n    for video in video_details:\n        video_info = {\n            'title': video['snippet']['title'],\n            'publishedAt': video['snippet']['publishedAt'],\n            'views': int(video['statistics'].get('viewCount', 0)),\n            'likes': int(video['statistics'].get('likeCount', 0)),\n            'dislikes': int(video['statistics'].get('dislikeCount', 0)),\n            'comments': int(video['statistics'].get('commentCount', 0))\n        }\n        videos.append(video_info)\n    return pd.DataFrame(videos)\n\n# Create DataFrame\ndf_videos = videos_to_df(video_details)\ndf_videos",
       "outputs": []
     },
     {
