Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -269,6 +269,23 @@
       "execution_count": null,
       "source": "import seaborn as sns\nimport matplotlib.pyplot as plt\n\n# Set dark theme for plots\nsns.set(style='darkgrid')\nplt.style.use('dark_background')\n\n# Plotting video views distribution\nplt.figure(figsize=(10, 6))\nsns.histplot(df_videos['views'], kde=True, color='blue')\nplt.title('Distribution of Video Views')\nplt.xlabel('Views')\nplt.ylabel('Frequency')\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "0e3b7c26-a0f9-4f1d-bf5e-6504aefb6ff2",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "e3dab9d0-761b-4fad-bb58-97272af1fd06"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:56:18.196506+00:00",
+          "start_time": "2023-12-13T20:56:16.795318+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Convert 'publishedAt' to datetime\ndf_videos['publishedAt'] = pd.to_datetime(df_videos['publishedAt'])\n\n# Plotting likes and comments over time\nplt.figure(figsize=(12, 6))\nsns.lineplot(data=df_videos, x='publishedAt', y='likes', label='Likes', color='blue')\nsns.lineplot(data=df_videos, x='publishedAt', y='comments', label='Comments', color='green')\nplt.title('Likes and Comments Over Time')\nplt.xlabel('Time')\nplt.ylabel('Count')\nplt.legend()\nplt.show()",
+      "outputs": []
     }
   ]
 }
