Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -286,6 +286,23 @@
       "execution_count": null,
       "source": "# Convert 'publishedAt' to datetime\ndf_videos['publishedAt'] = pd.to_datetime(df_videos['publishedAt'])\n\n# Plotting likes and comments over time\nplt.figure(figsize=(12, 6))\nsns.lineplot(data=df_videos, x='publishedAt', y='likes', label='Likes', color='blue')\nsns.lineplot(data=df_videos, x='publishedAt', y='comments', label='Comments', color='green')\nplt.title('Likes and Comments Over Time')\nplt.xlabel('Time')\nplt.ylabel('Count')\nplt.legend()\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "2a6c3cf9-8550-4642-96c1-3c4f7da323ea",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "6d5dc70d-a7ac-4842-83a5-0efd4f476937"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T20:57:07.692525+00:00",
+          "start_time": "2023-12-13T20:57:07.265388+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Analyzing number of videos uploaded over time\ndf_videos['year'] = df_videos['publishedAt'].dt.year\nvideo_count_by_year = df_videos.groupby('year').size()\n\n# Plotting number of videos uploaded each year\nplt.figure(figsize=(10, 6))\nsns.barplot(x=video_count_by_year.index, y=video_count_by_year.values, palette='Blues_r')\nplt.title('Number of Videos Uploaded Each Year')\nplt.xlabel('Year')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.show()",
+      "outputs": []
     }
   ]
 }
