Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -303,6 +303,23 @@
       "execution_count": null,
       "source": "# Analyzing number of videos uploaded over time\ndf_videos['year'] = df_videos['publishedAt'].dt.year\nvideo_count_by_year = df_videos.groupby('year').size()\n\n# Plotting number of videos uploaded each year\nplt.figure(figsize=(10, 6))\nsns.barplot(x=video_count_by_year.index, y=video_count_by_year.values, palette='Blues_r')\nplt.title('Number of Videos Uploaded Each Year')\nplt.xlabel('Year')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "f2ca547f-73cf-4d6f-a378-795b2ef2a731",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "9677543d-42fb-4276-96d1-f6eb9e53b1b1"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:07:15.124883+00:00",
+          "start_time": "2023-12-13T21:07:14.957790+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Top 10 videos for likes, comments, and view count\ntop_10_likes = df_videos.nlargest(10, 'likes')[['title', 'likes']]\ntop_10_comments = df_videos.nlargest(10, 'comments')[['title', 'comments']]\ntop_10_views = df_videos.nlargest(10, 'views')[['title', 'views']]\n\n# Displaying the top 10 videos\ntop_10_likes, top_10_comments, top_10_views",
+      "outputs": []
     }
   ]
 }
