Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -320,6 +320,23 @@
       "execution_count": null,
       "source": "# Top 10 videos for likes, comments, and view count\ntop_10_likes = df_videos.nlargest(10, 'likes')[['title', 'likes']]\ntop_10_comments = df_videos.nlargest(10, 'comments')[['title', 'comments']]\ntop_10_views = df_videos.nlargest(10, 'views')[['title', 'views']]\n\n# Displaying the top 10 videos\ntop_10_likes, top_10_comments, top_10_views",
       "outputs": []
+    },
+    {
+      "id": "faa3fabd-6309-449b-8453-db4a11d8ea23",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "112074e1-b418-41d3-b8dc-a548f3088739"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:10:07.157206+00:00",
+          "start_time": "2023-12-13T21:10:06.711284+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Visualizing Top 10 Videos by Likes\nplt.figure(figsize=(10, 6))\nsns.barplot(x='likes', y='title', data=top_10_likes, palette='Blues_r')\nplt.title('Top 10 Videos by Likes')\nplt.xlabel('Likes')\nplt.ylabel('Video Title')\nplt.show()",
+      "outputs": []
     }
   ]
 }
