--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -337,6 +337,35 @@
       "execution_count": null,
       "source": "# Visualizing Top 10 Videos by Likes\nplt.figure(figsize=(10, 6))\nsns.barplot(x='likes', y='title', data=top_10_likes, palette='Blues_r')\nplt.title('Top 10 Videos by Likes')\nplt.xlabel('Likes')\nplt.ylabel('Video Title')\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "e3396214-9f8f-4653-86ea-48c4334afebc",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "a3eec414-2d29-451e-843b-528a8ab148cd"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:10:50.745711+00:00",
+          "start_time": "2023-12-13T21:10:50.290804+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Visualizing Top 10 Videos by Comments\nplt.figure(figsize=(10, 6))\nsns.barplot(x='comments', y='title', data=top_10_comments, palette='Blues_r')\nplt.title('Top 10 Videos by Comments')\nplt.xlabel('Comments')\nplt.ylabel('Video Title')\nplt.show()",
+      "outputs": []
+    },
+    {
+      "id": "55349b7b-005f-4de0-92fb-930f0cd7bb97",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "# Visualizing Top 10 Videos by Views\nplt.figure(figsize=(10, 6))\nsns.barplot(x='views', y='title', data=top_10_views, palette='Blues_r')\nplt.title('Top 10 Videos by Views')\nplt.xlabel('Views')\nplt.ylabel('Video Title')\nplt.show()",
+      "outputs": []
     }
   ]
 }
