--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -405,6 +405,23 @@
       "execution_count": null,
       "source": "# Visualizing Top 10 Videos by Comments\nplt.figure(figsize=(10, 6))\nsns.barplot(x='comments', y='title', data=top_10_comments, palette='Blues_r')\nplt.title('Top 10 Videos by Comments')\nplt.xlabel('Comments')\nplt.ylabel('Video Title')\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "67702fec-2f16-49b1-b487-0c74eafb2a22",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "df58a3ac-5d19-49a3-a3e1-80fb8f2684fd"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:14:50.785762+00:00",
+          "start_time": "2023-12-13T21:14:50.369460+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Visualizing Top 10 Videos by Views\nplt.figure(figsize=(10, 6))\nsns.barplot(x='views', y='title', data=top_10_views, palette='Blues_r')\nplt.title('Top 10 Videos by Views')\nplt.xlabel('Views')\nplt.ylabel('Video Title')\nplt.show()",
+      "outputs": []
     }
   ]
 }
