Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -371,6 +371,35 @@
       "execution_count": null,
       "source": "# Visualizing Top 10 Videos by Views\nplt.figure(figsize=(10, 6))\nsns.barplot(x='views', y='title', data=top_10_views, palette='Blues_r')\nplt.title('Top 10 Videos by Views')\nplt.xlabel('Views')\nplt.ylabel('Video Title')\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "87ad52f6-f32a-474e-9ef5-b893f16a3603",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "be2f7614-8644-40d0-8007-09a3ab815f75"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:17:29.491294+00:00",
+          "start_time": "2023-12-13T21:17:29.083960+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Analyzing the month with the most video uploads\ndf_videos['month'] = df_videos['publishedAt'].dt.month\nvideo_count_by_month = df_videos.groupby('month').size()\n\n# Plotting number of videos uploaded each month\nplt.figure(figsize=(10, 6))\nsns.barplot(x=video_count_by_month.index, y=video_count_by_month.values, palette='Blues_r')\nplt.title('Number of Videos Uploaded Each Month')\nplt.xlabel('Month')\nplt.ylabel('Number of Videos')\nplt.xticks(range(0, 12), ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\nplt.show()",
+      "outputs": []
+    },
+    {
+      "id": "59b68cf2-4192-482f-97b7-f72d9e10fe8f",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "# Creating a year-month column for comparison\ndf_videos['year_month'] = df_videos['publishedAt'].dt.to_period('M')\n\n# Grouping data by year and month\nvideo_count_by_year_month = df_videos.groupby('year_month').size().reset_index(name='count')\n\n# Plotting video uploads per month per year\nplt.figure(figsize=(15, 8))\nsns.lineplot(data=video_count_by_year_month, x='year_month', y='count')\nplt.title('Video Uploads Per Month Over the Years')\nplt.xlabel('Year-Month')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.show()",
+      "outputs": []
     }
   ]
 }
