--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -394,11 +394,16 @@
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "3fa34db7-ff4c-4f1d-bb94-cc95f20853ae"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:23:51.132475+00:00",
+          "start_time": "2023-12-13T21:23:49.973534+00:00"
         }
       },
       "execution_count": null,
-      "source": "# Creating a year-month column for comparison\ndf_videos['year_month'] = df_videos['publishedAt'].dt.to_period('M')\n\n# Grouping data by year and month\nvideo_count_by_year_month = df_videos.groupby('year_month').size().reset_index(name='count')\n\n# Plotting video uploads per month per year\nplt.figure(figsize=(15, 8))\nsns.lineplot(data=video_count_by_year_month, x='year_month', y='count')\nplt.title('Video Uploads Per Month Over the Years')\nplt.xlabel('Year-Month')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.show()",
+      "source": "# Creating a year-month column for comparison\ndf_videos['year_month'] = df_videos['publishedAt'].dt.strftime('%Y-%m')\n\n# Grouping data by year and month\nvideo_count_by_year_month = df_videos.groupby('year_month').size().reset_index(name='count')\n\n# Plotting video uploads per month per year\nplt.figure(figsize=(15, 8))\nsns.lineplot(data=video_count_by_year_month, x='year_month', y='count')\nplt.title('Video Uploads Per Month Over the Years')\nplt.xlabel('Year-Month')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.show()",
       "outputs": []
     }
   ]
