Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -405,6 +405,23 @@
       "execution_count": null,
       "source": "# Creating a year-month column for comparison\ndf_videos['year_month'] = df_videos['publishedAt'].dt.strftime('%Y-%m')\n\n# Grouping data by year and month\nvideo_count_by_year_month = df_videos.groupby('year_month').size().reset_index(name='count')\n\n# Plotting video uploads per month per year\nplt.figure(figsize=(15, 8))\nsns.lineplot(data=video_count_by_year_month, x='year_month', y='count')\nplt.title('Video Uploads Per Month Over the Years')\nplt.xlabel('Year-Month')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "f1073581-4f17-4c93-88af-14ba13ea7d3f",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "d0354153-4ff1-450a-b71a-52720b29379a"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:25:46.724226+00:00",
+          "start_time": "2023-12-13T21:25:45.559953+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Plotting video uploads per month per year using a scatterplot\nplt.figure(figsize=(15, 8))\nsns.scatterplot(data=video_count_by_year_month, x='year_month', y='count')\nplt.title('Video Uploads Per Month Over the Years (Scatterplot)')\nplt.xlabel('Year-Month')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.show()",
+      "outputs": []
     }
   ]
 }
