Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -412,15 +412,32 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d0354153-4ff1-450a-b71a-52720b29379a"
+          "output_collection_id": "44796e69-688c-453f-b0a9-0f81d28c3255"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:25:46.724226+00:00",
-          "start_time": "2023-12-13T21:25:45.559953+00:00"
+          "end_time": "2023-12-13T21:27:16.272218+00:00",
+          "start_time": "2023-12-13T21:27:15.170753+00:00"
         }
       },
       "execution_count": null,
-      "source": "# Plotting video uploads per month per year using a scatterplot\nplt.figure(figsize=(15, 8))\nsns.scatterplot(data=video_count_by_year_month, x='year_month', y='count')\nplt.title('Video Uploads Per Month Over the Years (Scatterplot)')\nplt.xlabel('Year-Month')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.show()",
+      "source": "# Plotting video uploads per month per year using a scatterplot without vertical lines\nplt.figure(figsize=(15, 8))\nsns.scatterplot(data=video_count_by_year_month, x='year_month', y='count')\nplt.title('Video Uploads Per Month Over the Years (Scatterplot)')\nplt.xlabel('Year-Month')\nplt.ylabel('Number of Videos')\nplt.xticks(rotation=45)\nplt.grid(False)\nplt.show()",
+      "outputs": []
+    },
+    {
+      "id": "d93e4880-a0eb-4ba2-8fa9-6bbad1fc6ba2",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "4f3d1cde-53b0-4016-a0cf-c4cf51d74de8"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:31:19.468468+00:00",
+          "start_time": "2023-12-13T21:31:18.697579+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Adjusting the scatterplot with year bins and color by month\ndf_videos['year'] = df_videos['publishedAt'].dt.year\ndf_videos['month'] = df_videos['publishedAt'].dt.month\n\n# Grouping data by year and month\nvideo_count_by_year_month = df_videos.groupby(['year', 'month']).size().reset_index(name='count')\n\n# Plotting with year bins and color by month\nplt.figure(figsize=(15, 8))\nsns.scatterplot(data=video_count_by_year_month, x='year', y='count', hue='month', palette='bright')\nplt.title('Video Uploads Per Year with Monthly Color Coding')\nplt.xlabel('Year')\nplt.ylabel('Number of Videos')\nplt.legend(title='Month', labels=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\nplt.show()",
       "outputs": []
     }
   ]
