Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -429,15 +429,27 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "22a0fac4-3905-4f50-81f9-9de0d4303e21"
+          "output_collection_id": "fe36b62c-d762-416e-ac9e-b967a5a4b67f"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:34:20.181365+00:00",
-          "start_time": "2023-12-13T21:34:19.540209+00:00"
+          "end_time": "2023-12-13T21:37:21.287631+00:00",
+          "start_time": "2023-12-13T21:37:20.673586+00:00"
         }
       },
       "execution_count": null,
-      "source": "# Adjusting the scatterplot with year bins and color by month\ndf_videos['year'] = df_videos['publishedAt'].dt.year\ndf_videos['month'] = df_videos['publishedAt'].dt.month\n\n# Grouping data by year and month\nvideo_count_by_year_month = df_videos.groupby(['year', 'month']).size().reset_index(name='count')\n\n# Plotting with year bins and color by month\nplt.figure(figsize=(15, 8))\nsns.scatterplot(data=video_count_by_year_month, x='year', y='count', hue='month', palette='bright')\nplt.title('Video Uploads Per Year with Monthly Color Coding')\nplt.xlabel('Year')\nplt.ylabel('Number of Videos')\nplt.xticks(video_count_by_year_month['year'].unique())\nplt.legend(title='Month', labels=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\nplt.show()",
+      "source": "# Adjusting the scatterplot with larger dots\ndf_videos['year'] = df_videos['publishedAt'].dt.year\ndf_videos['month'] = df_videos['publishedAt'].dt.month\n\n# Grouping data by year and month\nvideo_count_by_year_month = df_videos.groupby(['year', 'month']).size().reset_index(name='count')\n\n# Plotting with year bins, color by month, and larger dots\nplt.figure(figsize=(15, 8))\nsns.scatterplot(data=video_count_by_year_month, x='year', y='count', hue='month', palette='bright', s=100) # Increased dot size\nplt.title('Video Uploads Per Year with Monthly Color Coding')\nplt.xlabel('Year')\nplt.ylabel('Number of Videos')\nplt.xticks(video_count_by_year_month['year'].unique())\nplt.legend(title='Month', labels=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\nplt.show()",
+      "outputs": []
+    },
+    {
+      "id": "70b2b05c-7e9c-4175-a15b-5d4741ee0ecc",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "# 1. Engagement Ratios\ndf_videos['like_ratio'] = df_videos['likes'] / df_videos['views']\ndf_videos['comment_ratio'] = df_videos['comments'] / df_videos['views']\n\n# Visualizing Engagement Ratios\nplt.figure(figsize=(12, 6))\nsns.histplot(df_videos['like_ratio'], kde=True, color='blue', label='Like Ratio')\nsns.histplot(df_videos['comment_ratio'], kde=True, color='green', label='Comment Ratio')\nplt.title('Engagement Ratios (Likes and Comments to Views)')\nplt.xlabel('Ratio')\nplt.ylabel('Frequency')\nplt.legend()\nplt.show()",
       "outputs": []
     }
   ]
