--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -445,11 +445,28 @@
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "7c40848c-16cf-47d7-9906-ca76c1421ab7"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:51:33.543793+00:00",
+          "start_time": "2023-12-13T21:51:32.787502+00:00"
         }
       },
       "execution_count": null,
       "source": "# 1. Engagement Ratios\ndf_videos['like_ratio'] = df_videos['likes'] / df_videos['views']\ndf_videos['comment_ratio'] = df_videos['comments'] / df_videos['views']\n\n# Visualizing Engagement Ratios\nplt.figure(figsize=(12, 6))\nsns.histplot(df_videos['like_ratio'], kde=True, color='blue', label='Like Ratio')\nsns.histplot(df_videos['comment_ratio'], kde=True, color='green', label='Comment Ratio')\nplt.title('Engagement Ratios (Likes and Comments to Views)')\nplt.xlabel('Ratio')\nplt.ylabel('Frequency')\nplt.legend()\nplt.show()",
+      "outputs": []
+    },
+    {
+      "id": "1dc321e7-922b-455c-839a-b2ad87ee6a4a",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "# 2. Trend Analysis\ndf_videos['year_month'] = df_videos['publishedAt'].dt.to_period('M')\nmonthly_likes = df_videos.groupby('year_month')['likes'].mean()\nmonthly_comments = df_videos.groupby('year_month')['comments'].mean()\nmonthly_views = df_videos.groupby('year_month')['views'].mean()\n\n# Visualizing Trends Over Time\nplt.figure(figsize=(15, 8))\nsns.lineplot(data=monthly_likes, label='Likes', color='blue')\nsns.lineplot(data=monthly_comments, label='Comments', color='green')\nsns.lineplot(data=monthly_views, label='Views', color='red')\nplt.title('Monthly Average Likes, Comments, and Views Over Time')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Count')\nplt.legend()\nplt.xticks(rotation=45)\nplt.show()",
       "outputs": []
     }
   ]
