Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -462,11 +462,16 @@
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "2034a5d8-0a5b-4018-93dc-adc05a73a3e6"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:52:45.875688+00:00",
+          "start_time": "2023-12-13T21:52:44.534278+00:00"
         }
       },
       "execution_count": null,
-      "source": "# 2. Trend Analysis\ndf_videos['year_month'] = df_videos['publishedAt'].dt.to_period('M')\nmonthly_likes = df_videos.groupby('year_month')['likes'].mean()\nmonthly_comments = df_videos.groupby('year_month')['comments'].mean()\nmonthly_views = df_videos.groupby('year_month')['views'].mean()\n\n# Visualizing Trends Over Time\nplt.figure(figsize=(15, 8))\nsns.lineplot(data=monthly_likes, label='Likes', color='blue')\nsns.lineplot(data=monthly_comments, label='Comments', color='green')\nsns.lineplot(data=monthly_views, label='Views', color='red')\nplt.title('Monthly Average Likes, Comments, and Views Over Time')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Count')\nplt.legend()\nplt.xticks(rotation=45)\nplt.show()",
+      "source": "# 2. Trend Analysis - Fixing the TypeError\ndf_videos['year_month'] = df_videos['publishedAt'].dt.strftime('%Y-%m')\nmonthly_likes = df_videos.groupby('year_month')['likes'].mean()\nmonthly_comments = df_videos.groupby('year_month')['comments'].mean()\nmonthly_views = df_videos.groupby('year_month')['views'].mean()\n\n# Visualizing Trends Over Time\nplt.figure(figsize=(15, 8))\nsns.lineplot(data=monthly_likes, label='Likes', color='blue')\nsns.lineplot(data=monthly_comments, label='Comments', color='green')\nsns.lineplot(data=monthly_views, label='Views', color='red')\nplt.title('Monthly Average Likes, Comments, and Views Over Time')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Count')\nplt.legend()\nplt.xticks(rotation=45)\nplt.show()",
       "outputs": []
     }
   ]
