--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -473,6 +473,40 @@
       "execution_count": null,
       "source": "# 2. Trend Analysis - Fixing the TypeError\ndf_videos['year_month'] = df_videos['publishedAt'].dt.strftime('%Y-%m')\nmonthly_likes = df_videos.groupby('year_month')['likes'].mean()\nmonthly_comments = df_videos.groupby('year_month')['comments'].mean()\nmonthly_views = df_videos.groupby('year_month')['views'].mean()\n\n# Visualizing Trends Over Time\nplt.figure(figsize=(15, 8))\nsns.lineplot(data=monthly_likes, label='Likes', color='blue')\nsns.lineplot(data=monthly_comments, label='Comments', color='green')\nsns.lineplot(data=monthly_views, label='Views', color='red')\nplt.title('Monthly Average Likes, Comments, and Views Over Time')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Count')\nplt.legend()\nplt.xticks(rotation=45)\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "4f13e76e-b20b-48a4-9b27-840fbe4c9855",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "cb5e2f29-cf2f-4d41-a004-5069dfa5f562"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:53:11.099151+00:00",
+          "start_time": "2023-12-13T21:53:10.927750+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "from wordcloud import WordCloud\n\n# 4. Word Cloud from Video Titles\nall_titles = ' '.join(df_videos['title'])\nwordcloud = WordCloud(width = 800, height = 800,\n                background_color ='black',\n                min_font_size = 10).generate(all_titles)\n\n# Displaying the Word Cloud\nplt.figure(figsize = (8, 8), facecolor = None)\nplt.imshow(wordcloud)\nplt.axis('off')\nplt.tight_layout(pad = 0)\n\nplt.show()",
+      "outputs": []
+    },
+    {
+      "id": "75d8fc93-7296-4793-b2b8-1a7aade02f1b",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "03758f0f-0143-45b1-9755-24a339b0b5f7"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:53:48.845819+00:00",
+          "start_time": "2023-12-13T21:53:46.076369+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "!pip install wordcloud",
+      "outputs": []
     }
   ]
 }
