Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -507,6 +507,23 @@
       "execution_count": null,
       "source": "!pip install wordcloud",
       "outputs": []
+    },
+    {
+      "id": "3f2d7ec8-4187-4822-9823-2390b4abbf05",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "01815c66-b25f-4e89-8da7-e5e1a304d23d"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:56:10.363086+00:00",
+          "start_time": "2023-12-13T21:56:09.089487+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Calculating Engagement Ratios\ndf_videos['like_ratio'] = df_videos['likes'] / df_videos['views']\ndf_videos['comment_ratio'] = df_videos['comments'] / df_videos['views']\ndf_videos['dislike_ratio'] = df_videos['dislikes'] / df_videos['views']\n\n# Plotting Engagement Ratios\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.histplot(df_videos['like_ratio'], kde=True, color='blue')\nplt.title('Like Ratio Distribution')\nplt.xlabel('Like Ratio')\nplt.ylabel('Frequency')\n\nplt.subplot(1, 3, 2)\nsns.histplot(df_videos['comment_ratio'], kde=True, color='green')\nplt.title('Comment Ratio Distribution')\nplt.xlabel('Comment Ratio')\n\nplt.subplot(1, 3, 3)\nsns.histplot(df_videos['dislike_ratio'], kde=True, color='red')\nplt.title('Dislike Ratio Distribution')\nplt.xlabel('Dislike Ratio')\n\nplt.tight_layout()\nplt.show()",
+      "outputs": []
     }
   ]
 }
