--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -524,6 +524,23 @@
       "execution_count": null,
       "source": "# Calculating Engagement Ratios\ndf_videos['like_ratio'] = df_videos['likes'] / df_videos['views']\ndf_videos['comment_ratio'] = df_videos['comments'] / df_videos['views']\ndf_videos['dislike_ratio'] = df_videos['dislikes'] / df_videos['views']\n\n# Plotting Engagement Ratios\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.histplot(df_videos['like_ratio'], kde=True, color='blue')\nplt.title('Like Ratio Distribution')\nplt.xlabel('Like Ratio')\nplt.ylabel('Frequency')\n\nplt.subplot(1, 3, 2)\nsns.histplot(df_videos['comment_ratio'], kde=True, color='green')\nplt.title('Comment Ratio Distribution')\nplt.xlabel('Comment Ratio')\n\nplt.subplot(1, 3, 3)\nsns.histplot(df_videos['dislike_ratio'], kde=True, color='red')\nplt.title('Dislike Ratio Distribution')\nplt.xlabel('Dislike Ratio')\n\nplt.tight_layout()\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "bcf10d6e-82a2-4040-a443-4a41330367ca",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "14536631-8c22-40e3-9dca-c49abe018f1f"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:56:49.559178+00:00",
+          "start_time": "2023-12-13T21:56:49.126503+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Trend Analysis for Likes, Comments, and Views\ndf_videos['year_month'] = df_videos['publishedAt'].dt.to_period('M')\n\n# Calculating monthly averages\nmonthly_avg = df_videos.groupby('year_month').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=monthly_avg, x='year_month', y='views', color='blue')\nplt.title('Monthly Average Views')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Views')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=monthly_avg, x='year_month', y='likes', color='green')\nplt.title('Monthly Average Likes')\nplt.xlabel('Year-Month')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=monthly_avg, x='year_month', y='comments', color='red')\nplt.title('Monthly Average Comments')\nplt.xlabel('Year-Month')\n\nplt.tight_layout()\nplt.show()",
+      "outputs": []
     }
   ]
 }
