--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -531,15 +531,32 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "14536631-8c22-40e3-9dca-c49abe018f1f"
+          "output_collection_id": "77e827a9-eaa1-4d89-b13e-09fadfe8afc8"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:56:49.559178+00:00",
-          "start_time": "2023-12-13T21:56:49.126503+00:00"
+          "end_time": "2023-12-13T21:57:28.531608+00:00",
+          "start_time": "2023-12-13T21:57:24.844558+00:00"
         }
       },
       "execution_count": null,
-      "source": "# Trend Analysis for Likes, Comments, and Views\ndf_videos['year_month'] = df_videos['publishedAt'].dt.to_period('M')\n\n# Calculating monthly averages\nmonthly_avg = df_videos.groupby('year_month').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=monthly_avg, x='year_month', y='views', color='blue')\nplt.title('Monthly Average Views')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Views')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=monthly_avg, x='year_month', y='likes', color='green')\nplt.title('Monthly Average Likes')\nplt.xlabel('Year-Month')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=monthly_avg, x='year_month', y='comments', color='red')\nplt.title('Monthly Average Comments')\nplt.xlabel('Year-Month')\n\nplt.tight_layout()\nplt.show()",
+      "source": "# Trend Analysis for Likes, Comments, and Views\ndf_videos['year_month'] = df_videos['publishedAt'].dt.strftime('%Y-%m')\n\n# Calculating monthly averages\nmonthly_avg = df_videos.groupby('year_month').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=monthly_avg, x='year_month', y='views', color='blue')\nplt.title('Monthly Average Views')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Views')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=monthly_avg, x='year_month', y='likes', color='green')\nplt.title('Monthly Average Likes')\nplt.xlabel('Year-Month')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=monthly_avg, x='year_month', y='comments', color='red')\nplt.title('Monthly Average Comments')\nplt.xlabel('Year-Month')\n\nplt.tight_layout()\nplt.show()",
+      "outputs": []
+    },
+    {
+      "id": "816eacc1-1316-4482-b49e-0a056e08ecea",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "d98a3ba7-c15c-4f9d-abff-0f9d39258223"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:57:56.860018+00:00",
+          "start_time": "2023-12-13T21:57:55.754703+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "from wordcloud import WordCloud\n\n# Generating a word cloud from video titles\nall_titles = ' '.join(df_videos['title'])\nwordcloud = WordCloud(width = 800, height = 800,\n                background_color ='black',\n                min_font_size = 10).generate(all_titles)\n\n# Displaying the word cloud\nplt.figure(figsize = (8, 8), facecolor = None)\nplt.imshow(wordcloud)\nplt.axis('off')\nplt.tight_layout(pad = 0)\n\nplt.show()",
       "outputs": []
     }
   ]
