Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -441,23 +441,6 @@
       "outputs": []
     },
     {
-      "id": "70b2b05c-7e9c-4175-a15b-5d4741ee0ecc",
-      "cell_type": "code",
-      "metadata": {
-        "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "7c40848c-16cf-47d7-9906-ca76c1421ab7"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-12-13T21:51:33.543793+00:00",
-          "start_time": "2023-12-13T21:51:32.787502+00:00"
-        }
-      },
-      "execution_count": null,
-      "source": "# 1. Engagement Ratios\ndf_videos['like_ratio'] = df_videos['likes'] / df_videos['views']\ndf_videos['comment_ratio'] = df_videos['comments'] / df_videos['views']\n\n# Visualizing Engagement Ratios\nplt.figure(figsize=(12, 6))\nsns.histplot(df_videos['like_ratio'], kde=True, color='blue', label='Like Ratio')\nsns.histplot(df_videos['comment_ratio'], kde=True, color='green', label='Comment Ratio')\nplt.title('Engagement Ratios (Likes and Comments to Views)')\nplt.xlabel('Ratio')\nplt.ylabel('Frequency')\nplt.legend()\nplt.show()",
-      "outputs": []
-    },
-    {
       "id": "1dc321e7-922b-455c-839a-b2ad87ee6a4a",
       "cell_type": "code",
       "metadata": {
@@ -475,23 +458,6 @@
       "outputs": []
     },
     {
-      "id": "4f13e76e-b20b-48a4-9b27-840fbe4c9855",
-      "cell_type": "code",
-      "metadata": {
-        "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "e40d284c-966d-482b-bec6-8867bf625cde"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-12-13T21:54:03.723954+00:00",
-          "start_time": "2023-12-13T21:54:02.431791+00:00"
-        }
-      },
-      "execution_count": null,
-      "source": "from wordcloud import WordCloud\n\n# 4. Word Cloud from Video Titles\nall_titles = ' '.join(df_videos['title'])\nwordcloud = WordCloud(width = 800, height = 800,\n                background_color ='black',\n                min_font_size = 10).generate(all_titles)\n\n# Displaying the Word Cloud\nplt.figure(figsize = (8, 8), facecolor = None)\nplt.imshow(wordcloud)\nplt.axis('off')\nplt.tight_layout(pad = 0)\n\nplt.show()",
-      "outputs": []
-    },
-    {
       "id": "75d8fc93-7296-4793-b2b8-1a7aade02f1b",
       "cell_type": "code",
       "metadata": {
@@ -502,10 +468,30 @@
         "ExecuteTime": {
           "end_time": "2023-12-13T21:53:48.845819+00:00",
           "start_time": "2023-12-13T21:53:46.076369+00:00"
+        },
+        "jupyter": {
+          "outputs_hidden": true
         }
       },
       "execution_count": null,
       "source": "!pip install wordcloud",
+      "outputs": []
+    },
+    {
+      "id": "816eacc1-1316-4482-b49e-0a056e08ecea",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "d98a3ba7-c15c-4f9d-abff-0f9d39258223"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T21:57:56.860018+00:00",
+          "start_time": "2023-12-13T21:57:55.754703+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "from wordcloud import WordCloud\n\n# Generating a word cloud from video titles\nall_titles = ' '.join(df_videos['title'])\nwordcloud = WordCloud(width = 800, height = 800,\n                background_color ='black',\n                min_font_size = 10).generate(all_titles)\n\n# Displaying the word cloud\nplt.figure(figsize = (8, 8), facecolor = None)\nplt.imshow(wordcloud)\nplt.axis('off')\nplt.tight_layout(pad = 0)\n\nplt.show()",
       "outputs": []
     },
     {
@@ -540,23 +526,6 @@
       },
       "execution_count": null,
       "source": "# Trend Analysis for Likes, Comments, and Views\ndf_videos['year_month'] = df_videos['publishedAt'].dt.strftime('%Y-%m')\n\n# Calculating monthly averages\nmonthly_avg = df_videos.groupby('year_month').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=monthly_avg, x='year_month', y='views', color='blue')\nplt.title('Monthly Average Views')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Views')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=monthly_avg, x='year_month', y='likes', color='green')\nplt.title('Monthly Average Likes')\nplt.xlabel('Year-Month')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=monthly_avg, x='year_month', y='comments', color='red')\nplt.title('Monthly Average Comments')\nplt.xlabel('Year-Month')\n\nplt.tight_layout()\nplt.show()",
-      "outputs": []
-    },
-    {
-      "id": "816eacc1-1316-4482-b49e-0a056e08ecea",
-      "cell_type": "code",
-      "metadata": {
-        "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "d98a3ba7-c15c-4f9d-abff-0f9d39258223"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-12-13T21:57:56.860018+00:00",
-          "start_time": "2023-12-13T21:57:55.754703+00:00"
-        }
-      },
-      "execution_count": null,
-      "source": "from wordcloud import WordCloud\n\n# Generating a word cloud from video titles\nall_titles = ' '.join(df_videos['title'])\nwordcloud = WordCloud(width = 800, height = 800,\n                background_color ='black',\n                min_font_size = 10).generate(all_titles)\n\n# Displaying the word cloud\nplt.figure(figsize = (8, 8), facecolor = None)\nplt.imshow(wordcloud)\nplt.axis('off')\nplt.tight_layout(pad = 0)\n\nplt.show()",
       "outputs": []
     }
   ]
